# NodeSailor

./: .gitignore  CLAUDE.md  NodeSailor.py  NodeSailor.pyw  NodeSailor.spec  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.1.2.md  SECURITY.md  colors.py  configurator_vlans.py  connection_list_editor.py  connections.py  convert_xlsx.py  custom_commands.py  display_options.py  example network 2.json  example network.json  example network.xlsx  example network6.json  generate_mac_vendor_rust.py  group_editor.py  group_editor_config.json  groups.py  gui.py  gui_help.py  gui_vlan.py  helpers.py  last_file_path.txt  mac_vendor_lookup.rs  network_state - home.json  node_list.py  nodes.py  notes.py  operator_vlans.py  package-lock.json  (+8 more)
.github/: dependabot.yml
.github/workflows/: publish.yml
.vibe-kanban-workspaces/a436-more-strobe-visu/: CLAUDE.md
Scripts/: activate  activate.bat  bottle.py  futurize-script.py  pasteurize-script.py
data/: custom_commands.json
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.svelte  app.css
tauri-app/src-tauri/: Cargo.toml  oui.csv  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src-tauri/src/commands/: discovery.rs  file_io.rs  mod.rs  network.rs  ping.rs  settings.rs  system.rs
tauri-app/src/components/canvas/: BackgroundImageEl.svelte  BgImageResizeHandle.svelte  CanvasStatusBar.svelte  ConnectionLine.svelte  ContextMenu.svelte  GroupRect.svelte  GroupResizeHandle.svelte  MatrixRain.svelte  NodeElement.svelte  StickyNote.svelte  TopologyCanvas.svelte  WaypointHandle.svelte
tauri-app/src/components/common/: TooltipWrapper.svelte
tauri-app/src/components/dialogs/: BgImageOpacityDialog.svelte  ConfirmDialog.svelte  (+9 more)
(+32 files in other folders)
