[package]
name = "nodesailor"
version = "1.1.0"
description = "NodeSailor - Network Topology Mapper"
authors = ["NodeSailor"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["process", "time", "rt"] }
regex = "1"
dirs = "6"

# Note: GitHub flags glib 0.18.5 (RUSTSEC-2024-0429) as a security vulnerability,
# but this is a transitive dependency through GTK bindings that are only used on Linux.
# On Windows (this platform), glib is not compiled or used, so the vulnerability
# does not affect Windows builds. The Tauri team has closed related issues as
# "not planned" since GTK3 bindings are unmaintained.
# See: https://github.com/tauri-apps/tauri/issues/12048
